--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -309,7 +309,7 @@ Order Page
 }
 
 .order-invoice .invoice-meta {
-    padding: 30px 30px 0px 30px;
+    padding: 30px 30px 30px 30px;
 }
 
 .order-invoice .invoice-date-service {
@@ -366,11 +366,17 @@ Order Page
     text-transform: uppercase;
 }
 
+.order-invoice .invoice-price-pdf {
+    padding: 5px 30px 0px 30px;
+    color: #6b7781;
+    font-size: 1.2rem;
+    line-height: 1.3em;
+}
 
 .order-invoice .invoice-price {
     padding: 5px 30px 0px 30px;
     color: #6b7781;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 1.3em;
 }
 
