--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -81,13 +81,13 @@
     	            	<div class="col-lg-4 col-sm-4 col-xs-4">
                 		</div>
                 		<div class="invoice-right col-lg-4 col-sm-4 col-xs-4">
-                			x <%= @order.duration %> hours
-                		</div>
-                		<div class="invoice-right col-lg-4 col-sm-4 col-xs-4">
                 			<% pre_tot = @order.duration*@order.hourly_fee %>
                             <% charge_onecontractor = pre_tot %>
                 			<%= number_to_currency(pre_tot, :unit=>'£') %>
                 		</div>
+                        <div class="invoice-right col-lg-4 col-sm-4 col-xs-4">
+                            x <%= @order.duration %> hours
+                        </div>
                 	</div>
                 </div>
             <% elsif @order.minimum_charge > 0 %>
@@ -145,11 +145,12 @@
             <% unless @order.discount.nil? || @order.discount == 0 %>
 
                 <% charge_hour_pay = (@order.duration * @order.hourly_fee) %>
-                <% if @order.minimum_charge > 0 %>
+
+                 <% unless @order.minimum_charge.nil? || @order.minimum_charge == 0 %>
                     <% tmp_duration = @order.duration - 1 %>
                     <% charge_hour_pay = tmp_duration*@order.hourly_fee + @order.minimum_charge %>
                 <% end  %>
-                <%if @order.number_contractors > 1 %>
+                <% unless @order.number_contractors.nil? || @order.number_contractors < 2 %>
                     <% charge_hour_pay = charge_hour_pay * @order.number_contractors %>
                 <% end %>
                 <% discount_amount = charge_hour_pay*(@order.discount/100)   %>
